2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/icimage.c: (pixman_image_set_component_alpha): Whitespace fix.
	(pixman_image_destroy): Fix leak of the clip region associated
	with an image. (NOTE: xserver/render doesn't have the same bug
	since it has FreePicture that calls into both DestroyPicture and
	DestroyPictureClip separately).

2005-07-09  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbIn24), (fbCompositeTrans_0565xnx0565),
	(fbCompositeSrcSrc_nxn), (pixman_composite):
	Begin merging in newer fb code.
	
	The code comes from keithp:
	  Initial import of Composite extension along with
	  name change from Apportion.
	  Added some accelerated code to fbpict to make this initial
	  hack a bit faster.  "real" extension bits to follow.

2005-07-09  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbCompositeSolidMask_nx8x8888),
	(fbCompositeSolidMask_nx8888x8888C),
	(fbCompositeSolidMask_nx8x0888), (fbCompositeSolidMask_nx8x0565),
	(fbCompositeSolidMask_nx8888x0565C), (fbCompositeSrc_8888x8888),
	(fbCompositeSrc_8888x0888), (fbCompositeSrc_8888x0565),
	(fbCompositeSrc_0565x0565), (fbCompositeSrcAdd_8000x8000),
	(fbCompositeSrcAdd_8888x8888), (fbCompositeSrcAdd_1000x1000),
	(fbCompositeSolidMask_nx1xn), (pixman_composite):
	More misc merging. Mostly s/pixman_composite/fbComposite/.

2005-07-09  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbOver), (fbOver24), (fbIn),
	(pixman_compositeSolidMask_nx8x8888),
	(pixman_compositeSolidMask_nx8888x8888C),
	(pixman_compositeSolidMask_nx8x0888),
	(pixman_compositeSolidMask_nx8x0565),
	(pixman_compositeSolidMask_nx8888x0565C),
	(pixman_compositeSrc_8888x8888), (pixman_compositeSrc_8888x0888),
	(pixman_compositeSrc_8888x0565), (pixman_compositeSrc_0565x0565),
	(pixman_compositeSrcAdd_8000x8000),
	(pixman_compositeSrcAdd_8888x8888),
	(pixman_compositeSrcAdd_1000x1000),
	(pixman_compositeSolidMask_nx1xn), (pixman_composite):
	More misc merging. Mostly stuff like s/uint32_t/CARD32/.
